--- a/style.css
+++ b/style.css
@@ -5,20 +5,29 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
-  background: linear-gradient(#141e30, #243b55);
+  background: #cae9ff;
+  height: 100vh;
+}
+
+header {
+  color: #1b4965;
+}
+
+.login-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
 }
 
 .login-box {
-  position: absolute;
-  top: 50%;
-  left: 50%;
   width: 400px;
   padding: 40px;
-  transform: translate(-50%, -50%);
-  background: rgba(0, 0, 0, 0.5);
+  background: #0d6efd;
   box-sizing: border-box;
-  box-shadow: 0 15px 25px rgba(0, 0, 0, 0.6);
+  box-shadow: 0 15px 25px #0d6efd;
   border-radius: 10px;
+  color: #fff;
 }
 
 .login-box h2 {
@@ -58,7 +67,7 @@ body {
 .login-box .user-box input:valid ~ label {
   top: -20px;
   left: 0;
-  color: #03e9f4;
+  color: #e2ebff;
   font-size: 12px;
 }
 
@@ -66,7 +75,7 @@ body {
   position: relative;
   display: inline-block;
   padding: 10px 20px;
-  color: #03e9f4;
+  color: #e2ebff;
   font-size: 16px;
   text-decoration: none;
   text-transform: uppercase;
@@ -77,11 +86,11 @@ body {
 }
 
 .login-box a:hover {
-  background: #03e9f4;
+  background: #e2ebff;
   color: #fff;
   border-radius: 5px;
-  box-shadow: 0 0 5px #03e9f4, 0 0 25px #03e9f4, 0 0 50px #03e9f4,
-    0 0 100px #03e9f4;
+  box-shadow: 0 0 5px #e2ebff, 0 0 25px #e2ebff, 0 0 50px #e2ebff,
+    0 0 100px #e2ebff;
 }
 
 .login-box a span {
@@ -94,7 +103,7 @@ body {
   left: -100%;
   width: 100%;
   height: 2px;
-  background: linear-gradient(90deg, transparent, #03e9f4);
+  background: linear-gradient(90deg, transparent, #e2ebff);
   animation: btn-anim1 1s linear infinite;
 }
 
@@ -113,7 +122,7 @@ body {
   right: 0;
   width: 2px;
   height: 100%;
-  background: linear-gradient(180deg, transparent, #03e9f4);
+  background: linear-gradient(180deg, transparent, #e2ebff);
   animation: btn-anim2 1s linear infinite;
   animation-delay: 0.25s;
 }
@@ -133,7 +142,7 @@ body {
   right: -100%;
   width: 100%;
   height: 2px;
-  background: linear-gradient(270deg, transparent, #03e9f4);
+  background: linear-gradient(270deg, transparent, #e2ebff);
   animation: btn-anim3 1s linear infinite;
   animation-delay: 0.5s;
 }
@@ -153,7 +162,7 @@ body {
   left: 0;
   width: 2px;
   height: 100%;
-  background: linear-gradient(360deg, transparent, #03e9f4);
+  background: linear-gradient(360deg, transparent, #e2ebff);
   animation: btn-anim4 1s linear infinite;
   animation-delay: 0.75s;
 }
@@ -166,4 +175,11 @@ body {
   100% {
     bottom: 100%;
   }
+}
+
+.carousel-image {
+  width: 100%;
+  padding-top: 55%;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
